2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Remove Banter/banter from the AC_CONFIG_FILES since the
	  Banter/Makefile.am takes care of building the script.
	* Banter/banter.in: Changed the libdir to use @pkglibdir@ now that the
	  Makefile.am takes care of parsing/building the file.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonGroup.cs: Added RemovePerson method to remove a person

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter.mdp, Banter/HIGMessageDialog.cs, Banter/Makefile.am: Added
	  HIGMessageDialog.cs from the tomboy project.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Preferences.cs: Don't attempt to set an empty array of
	  saved_windows if the key doesn't exist.  This prevents the ugly
	  error message in the output.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Preferences.cs: Added a semi-colon.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonGroup.cs: Added new methods to add persons to groups
	  even though there are problems with the evolution-sharp libraries

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	Fix for #439181.
	
	* data/banter.schemas.in, Banter/Preferences.cs: Don't use a
	  placeholder for saved windows.
	* Banter/Application.cs: Deal with there being no saved group windows.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/banter.in: Reverted back to r62 to fix the libdir variable.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* data/banter.schemas.in, Banter/Preferences.cs: Use the proper
	  defaults for ContactStyles.
	* data/Themes/ListStyles, data/Themes/ListStyles/basic-black.tar.gz,
	  data/Themes/ListStyles/basic.tar.gz, data/Themes/ContactStyles,
	  data/Themes/ContactStyles/basic-black.tar.gz,
	  data/Themes/ContactStyles/basic.tar.gz, data/Themes/Makefile.am:
	  Renamed ListStyles -> ContactStyles.
	* Banter/ContactStyleInfo.cs: Implemented this class so ThemeManager
	  will work.